# claas

./: .bumpversion.cfg  README.md  pytest.ini  setup.cfg  tox.ini
src/claas/: __main__.py  azav-kurs.xsd  convert_files.py  curriculum_converter.py  example.xml  html_converter.py  markdown_converter.py  table_html_converter.py  table_word_converter.py  word_converter.py
tests/: fixtures.py  full_example.xml  main_test.py  minimal_example.xml  test_html_converter.py  test_markdown_converter.py  test_word_converter.py
