[metadata]
name = claas
version = 0.1.0
author = Dr. Matthias Hölzl
author_email = tc@xantira.com
description = The Course Layout And Assembly System
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hoelzl/claas/
project_urls =
    Bug Tracker = https://github.com/hoelzl/claas/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9

install_requires =
    click>=8.0
    python-docx>=1.1.2
    platformdirs>=1.4
    watchdog>=4.0


[options.packages.find]
where=src

[options.entry_points]
console_scripts:
    claas = claas.__main__:generate_outputs